# chest-ct-mlops

./: .env.example  Dockerfile  Makefile  app.py  chest-data.zip.dvc  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci-cd.yml
.jenkins/: Jenkinsfile
config/: config.yaml
docker/: Dockerfile.dev  Dockerfile.prod
requirements/: base.txt  dev.txt  prod.txt
src/cnnClassifier/components/: data_validation.py  feature_engineering.py  model_trainer.py  training_drift.py
src/cnnClassifier/config/: configuration.py
src/cnnClassifier/entity/: config_entity.py
src/cnnClassifier/pipeline/: stage_03_feature_engineering.py  stage_04_training_drift.py  stage_05_model_trainer.py
src/cnnClassifier/utils/: secrets_manager.py
terraform/: ecs-permissions.json  main.tf  secrets.tf  terraform.tfvars  variables.tf
tests/: test_drift.py  test_features.py
